@@ -19,6 +19,11 @@
 
 #CLASSIC=FALSE
 
+# CPAN_IGNORE - if TRUE, install scripts even if they are already installed
+# from the CPAN.
+
+#CPAN_IGNORE=FALSE
+
 # DISTCLEAN - if TRUE, remove the downloaded source code and completed
 # package archives.
 
