@@ -34,6 +34,11 @@ SlackBuild checks by [sbocheck(1)](sbocheck.1.md) are disabled, and previously-u
 build options are not displayed. This provides a more traditional
 **sbotools** look and feel for those who want it.
 
+**CPAN_IGNORE=(FALSE\|TRUE)**
+
+If **TRUE**, install scripts even if they are already installed from the
+CPAN.
+
 **DISTCLEAN=(FALSE\|TRUE)**
 
 If **TRUE**, then remove the package and source archives after building.
