@@ -274,8 +274,8 @@ when a build fails.
 .PP
 \&\f(CWrationalize_queue()\fR takes a build queue and rearranges it such that
 no script appears before any of its dependencies. Currently, this is only
-useful when an automatic reverse dependency rebuild has been triggered. It
-returns the rearranged queue.
+useful when an automatic reverse dependency rebuild has been triggered.
+The rearranged queue is returned.
 .SS revert_slackbuild
 .IX Subsection "revert_slackbuild"
 .Vb 1
