@@ -58,6 +58,15 @@ look and feel for those who want it.
 .RE
 .P
 .B
+CPAN_IGNORE=(FALSE|TRUE)
+.RS
+If
+.B
+TRUE\fR\
+\&, install scripts even if they are already installed from the CPAN.
+.RE
+.P
+.B
 DISTCLEAN=(FALSE|TRUE)
 .RS
 If
